# OpsMind-AI-Incident-Troubleshooting-Runbook-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/opsmind/: __init__.py  analyzer.py  cli.py  config.py  formatter.py  foundry_iq.py  local_retriever.py  models.py  safety.py  ui_streamlit.py
config/: app.example.env  retrieval_config.json
demo/: demo_script.md  run_demo.py  sample_incidents.json
docs/: AZURE_SETUP.md  HACKATHON.md  architecture.md  architecture_diagram.mmd  folder_tree.md  implementation_plan.md  judging_optimization.md  kb_design.md  task_breakdown.md
knowledge_base/runbooks/: RB-CPU-001-linux-vm-cpu-spike.md  RB-DB-001-database-latency-connections.md  RB-DEPLOY-001-failed-deployment.md  RB-DISK-001-linux-disk-full.md  RB-DNS-001-resolution-failure.md  RB-HTTP-001-app-502-503.md  RB-K8S-001-pod-crashloop.md  RB-SSL-001-certificate-expiry.md  RB-VM-001-azure-vm-connectivity.md
prompts/: answer_formatting.md  fallback.md  retrieval.md  safety_guardrails.md  system.md
tests/: test_analyzer.py  test_classification.py  test_local_retriever.py  test_safety.py  test_validation.py
