[project]
name = "opsmind-ai"
version = "0.1.0"
description = "Incident troubleshooting and runbook reasoning agent using Microsoft Foundry IQ."
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.36.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

