[project]
name = "opsmind-ai"
version = "0.1.0"
description = "AI-powered incident troubleshooting agent using Microsoft Foundry IQ"
requires-python = ">=3.11"
dependencies = [
  "azure-ai-projects>=1.0.0",
  "azure-identity>=1.15.0",
  "azure-core>=1.30.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.35.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
opsmind = "app.opsmind.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
